# modechanger

./: CMakeLists.txt  ert_main.cpp  modeChanger.cpp  modeChanger.h  modeChanger_data.cpp  modeChanger_private.h  modeChanger_types.h  multiword_types.h  package.xml  packageInfo.mat  rtmodel.h  rtwtypes.h  slros_busmsg_conversion.cpp  slros_busmsg_conversion.h  slros_initialize.cpp  slros_initialize.h
include/modechanger/: modechanger.h  modechanger_private.h  modechanger_types.h  multiword_types.h  rosnodeinterface.h  rtmodel.h  rtwtypes.h  slros_busmsg_conversion.h  slros_initialize.h  visibility_control.h
src/: main.cpp  modechanger.cpp  modechanger_data.cpp  rosnodeinterface.cpp  slros_busmsg_conversion.cpp  slros_initialize.cpp
